@@ -10,14 +10,12 @@ import ru.schedule.manager.business.exception.ExceptionMessageUtils;
 import ru.schedule.manager.business.repository.ProfessorDisciplineLnkRepository;
 import ru.schedule.manager.infrastructure.base.dictionary.administered.dto.DictionaryDto;
 import ru.schedule.manager.infrastructure.base.dictionary.administered.entity.Dictionary;
-import ru.schedule.manager.infrastructure.base.dictionary.administered.repository.DictionaryRepository;
 import ru.schedule.manager.infrastructure.base.dictionary.administered.service.AdministeredDictionaryService;
 import ru.schedule.manager.infrastructure.base.service.BaseServiceAware;
 
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import static ru.schedule.manager.business.exception.ExceptionMessageUtils.ENTITY_NOT_FOUND_EXCEPTION_PATTERN;
 
@@ -29,8 +27,6 @@ public class ProfessorDisciplineService implements BaseServiceAware<ProfessorDis
 
 	private final ProfessorDisciplineLnkRepository professorDisciplineLnkRepository;
 
-	private final DictionaryRepository dictionaryRepository;
-
 	@Override
 	public ProfessorDisciplineLnkDto fromEntity(final ProfessorDisciplineLnk entity) {
 		return ProfessorDisciplineLnkDto.builder()
@@ -39,6 +35,8 @@ public class ProfessorDisciplineService implements BaseServiceAware<ProfessorDis
 			.id(entity.getId())
 			.createdDateTime(entity.getCreatedDateTime())
 			.updateDateTime(entity.getUpdateDateTime())
+			.createdBy(entity.getCreatedByEmployee().getFullName())
+			.updatedBy(entity.getUpdatedByEmployee().getFullName())
 			.build();
 	}
 
@@ -48,7 +46,7 @@ public class ProfessorDisciplineService implements BaseServiceAware<ProfessorDis
 			.filter(Objects::nonNull)
 			.map(this::fromEntity)
 			.sorted(Comparator.comparing(value -> value.getDiscipline().getValue()))
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	@Override
@@ -71,10 +69,10 @@ public class ProfessorDisciplineService implements BaseServiceAware<ProfessorDis
 	@Override
 	@SneakyThrows
 	public ProfessorDisciplineLnkDto create(final ProfessorDisciplineLnkDto dto) {
-		final Dictionary professor = dictionaryRepository.findById(dto.getProfessor().getId()).orElseThrow();
-		final Dictionary discipline = dictionaryRepository.findById(dto.getDiscipline().getId()).orElseThrow();
+		final Dictionary professor = administeredDictionaryService.getOneAsEntity(dto.getProfessor());
+		final Dictionary discipline = administeredDictionaryService.getOneAsEntity(dto.getDiscipline());
 		if (professorDisciplineLnkRepository.findByProfessorAndDiscipline(professor, discipline).isPresent()) {
-			throw new IllegalAccessException("Запись с такими параметрами уже существует");
+			return dto;
 		}
 		return this.fromEntity(
 			professorDisciplineLnkRepository.save(
@@ -100,7 +98,7 @@ public class ProfessorDisciplineService implements BaseServiceAware<ProfessorDis
 	public List<ProfessorDisciplineLnkDto> getProfessorDisciplines(final DictionaryDto professor) {
 		return this.fromEntity(
 			professorDisciplineLnkRepository.findByProfessor(
-				dictionaryRepository.findById(professor.getId()).orElseThrow()
+				administeredDictionaryService.getOneAsEntity(professor)
 			)
 		);
 	}
